<resources>
    <string name="app_name">PMM_PROYECTO_Arnau</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Juego</string>
    <string name="menu_gallery">Novedades</string>
    <string name="menu_slideshow">Calculadora</string>
    <string name="menu_tools">Camara</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="correo_o_usuario">Correo o Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="ha_olvidado_la_contrase_a">¿Ha olvidado la contraseña?</string>
    <string name="entrar">ENTRAR</string>
    <string name="nuevo_juego">NUEVO JUEGO</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="a_o">Año:</string>
    <string name="crear_juego">CREAR JUEGO</string>
    <string name="editar_juego">EDITAR JUEGO</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="juego">Juego</string>
    <string name="descripci_n">Descripción</string>
    <string name="_2015">2015</string>
    <string name="a_adir_juego">añadir juego</string>
    <string name="has_ganado">!!HAS GANADO!!</string>
    <string name="barajar">Barajar</string>
    <string name="puntuacion_0">PUNTUACION: 0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="camara">!!CAMARA!!</string>
    <string name="hacer_foto">HACER FOTO</string>
    <string name="lista_juegos">Lista de juegos vacia.</string>
</resources>
