<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondojuego">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGanar"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/confeti"
            android:scaleType="centerCrop"/>
        <TextView
            android:text="@string/has_ganado"
            android:textStyle="bold"
            android:id="@+id/text_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/negro"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabla"
        android:paddingTop="10dp"
        android:stretchColumns="3">

        <TableRow android:gravity="center">
            <Button
                android:id="@+id/uno"
                android:text="@string/_1"
                android:textSize="40dp"
                style="@style/boton3"
                ></Button>
            <Button
                android:id="@+id/dos"
                android:text="@string/_2"
                android:textSize="40dp"
                style="@style/boton3"></Button>
            <Button
                android:id="@+id/tres"
                android:text="@string/_3"
                android:textSize="40dp"
                style="@style/boton3"
                ></Button>
        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/cuatro"
                android:text="@string/_4"
                android:textSize="40dp"
                style="@style/boton3"></Button>
            <Button
                android:id="@+id/cinco"
                android:text="@string/_5"
                android:textSize="40dp"
                style="@style/boton3"></Button>
            <Button
                android:id="@+id/seis"
                android:text="@string/_6"
                android:textSize="40dp"
                style="@style/boton3"></Button>
        </TableRow>

        <TableRow android:gravity="center">
            <Button
                android:id="@+id/siete"
                android:text="@string/_7"
                android:textSize="40dp"
                style="@style/boton3"></Button>
            <Button
                android:id="@+id/ocho"
                android:text="@string/_8"
                android:textSize="40dp"
                style="@style/boton3"></Button>
            <Button
                android:id="@+id/vacio"
                android:text=""
                android:textSize="40dp"
                style="@style/boton3"></Button>
        </TableRow>
        <Button
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:id="@+id/baraja"
            android:text="@string/barajar"
            style="@style/boton">
        </Button>

        <TextView
            android:id="@+id/puntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/puntuacion_0"
            android:textColor="@color/blanco"
            android:textSize="30dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>