<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondojuego"
    android:gravity="bottom">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:padding="10pt"
        android:textColor="@color/blanco"
        android:textSize="60dp"
        android:gravity="right"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ds"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/siete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/ocho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:text="@string/_9"
            android:id="@+id/nueve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:text="/"
            android:id="@+id/dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:textColor="@color/rojoMate"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/cinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/seis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/multiplica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:layout_weight="25"
            android:textColor="@color/rojoMate"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/tres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_weight="25"
            android:textColor="@color/rojoMate"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp">
        <Button
            android:id="@+id/borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:layout_weight="25"
            android:textColor="@color/rojoMate"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/cero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_weight="25"
            android:textColor="@color/blanco"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/igual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="="
            android:layout_weight="25"
            android:textColor="@color/rojoMate"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
        <Button
            android:id="@+id/sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:layout_weight="25"
            android:textColor="@color/rojoMate"
            android:textSize="25dp"
            android:background="@color/gris"
            android:layout_margin="3dp"
            android:padding="6dp"></Button>
    </LinearLayout>
</LinearLayout>