<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="8dp"
    android:background="@drawable/custom_ripple"
    >
    <ImageView
        android:id="@+id/img_juego"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentLeft="true"
        android:src="@drawable/login">
    </ImageView>
    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/juego"
        android:layout_toRightOf="@+id/img_juego"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:maxLines="1">
    </TextView>
    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripci_n"
        android:layout_toRightOf="@+id/img_juego"
        android:layout_below="@+id/tv_nombre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:maxLines="1">
    </TextView>
    <TextView
        android:id="@+id/tv_anyo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2015"
        android:maxLines="1"
        android:textColor="@color/colorAccent"
        android:gravity="right">
    </TextView>
</RelativeLayout>