<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="vertical"
    android:background="@drawable/fondojuego">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_juego"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"></TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent">
        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:text="@string/nombre"
            android:textSize="15dp"
            android:textColor="@color/blanco"
            android:paddingLeft="10dp">
        </TextView>
        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_nombre"
            android:textColor="@color/blanco">
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent">
        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:text="@string/descripcion"
            android:textSize="15dp"
            android:textColor="@color/blanco"
            android:paddingLeft="10dp">
        </TextView>
        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_descripcion"
            android:textColor="@color/blanco">
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_anyo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginRight="28dp"
            android:text="@string/a_o"
            android:textSize="15dp"
            android:textColor="@color/blanco"
            android:paddingLeft="10dp"></TextView>
        <EditText
            android:id="@+id/et_anyo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_anyo"
            android:textColor="@color/blanco">
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="8dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/fotoJuego"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:src="@drawable/login">
        </ImageView>
    </RelativeLayout>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/b_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cambios"
        style="@style/boton">
    </Button>
</LinearLayout>