<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/mi_cuenta"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_x="58dp"
        android:layout_y="141dp"
        android:nextFocusUp="@id/imageView"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iCorreo"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/correo"
                android:drawablePadding="5dp"
                android:hint="@string/correo_o_usuario"></EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Switch
            android:id="@+id/sContrasenya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_gravity="right"
            android:layout_marginRight="25dp">
        </Switch>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iContrasenya"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="200dp">
            <EditText
                android:id="@+id/contrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:drawableLeft="@drawable/candado"
                android:inputType="textPassword"
                android:drawablePadding="5dp">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/b_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:layout_marginTop="255dp"
            android:layout_marginLeft="5dp"
            style="@style/boton2"
            android:textColor="@color/azul"
            android:textSize="12dp"
            android:textAllCaps="false">

        </Button>
        <Button
            android:id="@+id/olvidado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ha_olvidado_la_contrase_a"
            android:layout_marginTop="255dp"
            android:textAlignment="center"
            android:layout_marginRight="25dp"
            android:layout_gravity="right"
            android:textSize="12dp"
            style="@style/boton2"
            android:textColor="@color/azul"
            android:textAllCaps="false">
        </Button>
        <Button
            android:id="@+id/entrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_marginTop="140dp"
            android:layout_gravity="center"
            style="@style/boton">
        </Button>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_x="144dp"
            android:layout_y="42dp"
            android:background="@drawable/icono"
            android:padding="7dp"
            android:src="@drawable/login"></ImageView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>